Fix book grid alignment

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -518,6 +518,7 @@ nav li:hover a {
   padding: 0 0 1rem 0;
   display: flex;
   flex-direction: column;
+  width: 165px;
 }
 
 .log-entry:not(:first-child) {
